Fix letter-spacing value in style.css

--- a/css/style.css
+++ b/css/style.css
@@ -395,7 +395,7 @@ body {
     text-orientation: mixed;
     font-size: clamp(2.4rem, 10vw, 2.4rem);
     line-height: 4rem;
-    letter-spacing: o;
+    letter-spacing: 0;
   }
 
   .hero-text br {
